--- a/src/Makefile
+++ b/src/Makefile
@@ -119,6 +119,8 @@ endif
 
 LIB_SYS_LIBS += $(LIBEVENT_SYS_LIBS)
 
+BIN_INSTALLS_WIN32 += $(wildcard $(LIBEVENT)/lib/*.dll)
+
 #===========================
 
 include $(TOP)/configure/RULES
